# loki-draw

./: Cargo.toml  LICENSE
examples/: font-only.rs  hello-world.rs  square.rs
examples/common/: opengl.rs
src/: drawer.rs  font.rs  lib.rs  rect.rs  text.rs
src/opengl/: array_buffer.rs  image_renderer.rs  mod.rs  rect_renderer.rs  shader.rs  text_renderer.rs  text_renderer_v2.rs  texture.rs
src/opengl/shaders/: image.frag  image.vert  rect.frag  rect.vert  square.frag  text.frag  text.vert
