[package]
name = "loki-draw"
description = "Simple 2D renderer for GUIs."
version = "0.1.0"
edition = "2021"
authors = ["Speykious <speykious@gmail.com>", "limikael <li.mikael@gmail.com>"]

[dependencies]
gl = "0.14.0"
glam = "0.24.0"
rusttype = { version = "0.9.3", features = ["gpu_cache"] }

[dev-dependencies]
glutin = "0.30.6"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.1"
winit = "0.28.2"
