[package]
name = "loki-draw"
description = "Simple 2D renderer for GUIs."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Speykious <speykious@gmail.com>", "limikael <li.mikael@gmail.com>"]

[dependencies]
gl = "0.14.0"
glam = "0.25.0"
rusttype = { version = "0.9.3", features = ["gpu_cache"] }

[dev-dependencies]
glutin = "0.31.2"
glutin-winit = "0.4.2"
raw-window-handle = "0.5.2"
winit = { version = "0.29.7", features = ["rwh_05"] }
